--- a/data/popover/index.html
+++ b/data/popover/index.html
@@ -5,28 +5,31 @@
   </head>
   <body>
     <header>
+      <img src="../logo.svg" />
       <h1>SecureFox</h1>
     </header>
     <main>
+      <div class="meter">
+        <div class="selected">Low</div>
+        <div>Medium</div>
+        <div>Paranoid</div>
+      </div>
       <input
+        class="slider"
         type="range"
         step="1"
         max="3"
         min="1"
         value="1"
-        
       />
       <div class="panel-text">
         <section class="panel-level-1">
-          <h1>Low</h1>
           <p>Standard Firefox defaults</p>
         </section>
         <section class="panel-level-2">
-          <h1>Medium</h1>
           <p>Low chance of breaking sites.</p>
         </section>
         <section class="panel-level-3">
-          <h1>Paranoid mode</h1>
           <p>High chance of breaking many sites. Disables prediction of URLs and low grade certs along with features which are easy to track users.</p>
         </section>
       </div>
