Neaten descriptions and labels of modes - fixes #1

--- a/data/popover/index.html
+++ b/data/popover/index.html
@@ -10,8 +10,8 @@
     </header>
     <main>
       <div class="meter">
-        <div class="selected">Low</div>
-        <div>Medium</div>
+        <div class="selected">Off</div>
+        <div>Secure</div>
         <div>Paranoid</div>
       </div>
       <input
@@ -27,10 +27,17 @@
           <p>Standard Firefox defaults</p>
         </section>
         <section class="panel-level-2">
-          <p>Low chance of breaking sites.</p>
+          <p>
+            Tracking protection is enabled everywhere,
+            and sharing your personal browsing data is limited,
+            but it won't break many sites.
+          </p>
         </section>
         <section class="panel-level-3">
-          <p>High chance of breaking many sites. Disables prediction of URLs and low grade certs along with features which are easy to track users.</p>
+          <p>
+            All security settings enabled.
+            Consequently, some sites will break.
+          </p>
         </section>
       </div>
     </main>
