Changing name to ParanoidPanda

--- a/data/popover/index.html
+++ b/data/popover/index.html
@@ -6,7 +6,7 @@
   <body>
     <header>
       <img src="../logo.svg" />
-      <h1>SecureFox</h1>
+      <h1>ParanoidPanda</h1>
     </header>
     <main>
       <div class="meter">
